# ros2_odrive_personal

./: .gitignore  README.md  buildsource.sh  requirements.txt
read_furata_encoder/: read_furata_encoder.ino
sim/: FurataPendulum.py
src/msgs_furata/: CMakeLists.txt  package.xml
src/msgs_furata/msgs/: TelemetryFurata.msg
src/ps5_odrive_control/: CMakeLists.txt  package.xml  setup.cfg  setup.py
src/ps5_odrive_control/launch/: encoder_record_launch.py  furata_launch.py  ps5_odrive_launch.py
src/ps5_odrive_control/ps5_odrive_control/: acckf_encoder_node.py  encoder_node.py  furata_controller.py  integrated_furata.py  odrive_profiler.py  ps5_controller_node.py  ps5_odrive_node.py  test_node.py  velocity_furata.py
src/ps5_odrive_control/ps5_odrive_control/common/: ReaderMCU.py  playing_with_odrive.py
src/ps5_odrive_control/ps5_odrive_control/config/: cogging_constvel.json
src/ps5_odrive_control/ps5_odrive_control/msg/: Encoder.msg
src/ps5_odrive_control/ps5_odrive_control/sys_id/: PostprocessLinearTau.py  PostprocessStepVel.py  cogging_cal.py  friction_sine_waves.py  friction_tester.py  full_sysid_oop.py  full_sysid_torquewaves.py  linear_sysid_position.py  linear_sysid_torque.py  postprocess_sys_id.py  step_sysid_velocity.py  torque_sine_waves.py
src/ps5_odrive_control/test/: test_ps5controller.py
teensy_KF_accel/: AccelKF.cpp  AccelKF.hpp  teensy_KF_accel.ino
teensy_furata_encoder/: teensy_furata_encoder.ino
